[gd_scene load_steps=8 format=3 uid="uid://bx2n8tm2vop3k"]

[ext_resource type="Script" uid="uid://kkhvf1nr7pwg" path="res://Scenes/TransitionManager/TransitionScenes/broken_crystal_transition.gd" id="1_cwrn6"]
[ext_resource type="Shader" uid="uid://b0ex7nno1vjw8" path="res://Assets/Shaders/2s_mirror_effect.gdshader" id="2_ssam8"]
[ext_resource type="Texture2D" uid="uid://b3jyktv0r7o26" path="res://Scenes/TransitionManager/TransitionScenes/preview_transition.png" id="3_j6ku8"]
[ext_resource type="AudioStream" uid="uid://c408td73tq17t" path="res://Assets/Sounds/SE/broken_glass.ogg" id="4_w5w50"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_fe7ev"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_b6y0q"]
seamless = true
noise = SubResource("FastNoiseLite_fe7ev")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cu3ym"]
shader = ExtResource("2_ssam8")
shader_parameter/reflection_viewport = ExtResource("3_j6ku8")
shader_parameter/normal_map = SubResource("NoiseTexture2D_b6y0q")
shader_parameter/amount = 0.036

[node name="BrokenCrystalTransition" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cwrn6")

[node name="Pass1" type="SubViewport" parent="."]
unique_name_in_owner = true
size = Vector2i(1152, 648)

[node name="Effect" type="ColorRect" parent="Pass1"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_cu3ym")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Pass2" type="SubViewport" parent="."]
unique_name_in_owner = true
size = Vector2i(1152, 648)

[node name="Background" type="ColorRect" parent="Pass2"]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="ShatterContainer" type="Control" parent="Pass2"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BrokenCrystal" type="Polygon2D" parent="."]
unique_name_in_owner = true
polygon = PackedVector2Array(0, 0, 0, 159.6, 317.2, 208, 327.5, 208, 375.5, 132, 378.1, 132, 382.8, 118.6, 239, 4.2, 239, 0, 653, 0, 270, 0, 270, 13.6, 319, 55.6, 319, 60, 646.9, 132, 659.5, 132, 653, 8.5, 813.1, 1.2, 761.1, 0, 666, 0, 666, 58.1, 803.5, 21, 812.9, 21, 1098.1, 1.2, 1026.7, 0, 896, 0, 896, 6, 861, 59, 861, 75.7, 1088.1, 21, 1097.9, 21, 852.3, 15.4, 675.8, 64, 665.5, 64, 676.5, 276, 698.3, 276, 863.3, 29.6, 855, 24, 1152, 178, 1152, 96.9, 1149.7, 15.9, 1130, 16.1, 1130, 19.1, 988, 53, 981.9, 53, 976.3, 64, 1075.9, 200, 1084.8, 200, 1144.8, 178, 957.3, 58.3, 943, 62.6, 849, 85, 841.7, 85, 724.8, 255, 720.7, 255, 717.7, 271.4, 743.2, 281, 750, 281, 985.1, 127, 990, 127, 995.6, 116.5, 375, 78.5, 375, 96.8, 594, 281, 600, 285, 632, 284, 671, 283, 659, 151.5, 659, 143, 1008, 123.3, 994, 127.7, 994, 130.5, 761.5, 282.6, 766, 289.4, 766, 291, 769, 300.5, 1049.4, 211, 1056.1, 211, 1061.7, 200.3, 395.2, 128.3, 384, 133.7, 384, 138.2, 345, 203.2, 345, 214.2, 569, 294, 578, 294, 586, 279, 0, 163.7, 0, 177.4, 5, 240.8, 5, 249.9, 49.4, 255, 58, 255, 87, 201, 91, 201, 92.9, 183.1, 104, 180.9, 104, 191.7, 78, 247.8, 78, 259.8, 319.3, 292, 324.3, 292, 376.3, 253, 383.1, 253, 384.8, 234.9, 1152, 262, 1152, 251.2, 1150.8, 186.9, 1131, 187.1, 1131, 190.9, 1085.4, 207, 1080.7, 207, 1034.8, 255, 1027.3, 255, 1028.7, 276.3, 1137.5, 262, 1017.8, 228.5, 802, 294, 768, 305, 775, 322, 980.5, 287, 990.5, 287, 1028.5, 243.6, 1021, 237, 400, 236.6, 400, 247.2, 356, 282.2, 356, 296.9, 573.4, 322, 583.4, 322, 586.3, 305.5, 0, 254.3, 0, 342.3, 80.3, 340, 105.7, 340, 141.7, 296, 147.3, 296, 148.7, 277.5, 1150.9, 268, 1131, 268, 1131, 270.6, 1101.3, 276, 1090.3, 276, 1095, 344.7, 1095, 378.8, 1138.7, 390, 1152, 390, 1152, 379.8, 164, 276.5, 164, 285.5, 133, 324.5, 133, 339.2, 420.2, 333, 563, 330, 567, 325, 1078.3, 278.7, 1059, 279.4, 1059, 281.4, 791, 324, 781.6, 324, 780.4, 342.7, 1071.3, 381, 1085.8, 381, 686, 277.7, 686, 284.1, 588, 286, 586, 294, 594, 304, 592, 333, 592, 395, 626, 405, 664, 419, 698, 391, 724.1, 422, 737.6, 422, 768, 350, 768, 336, 773, 327, 767, 320, 753, 305, 746, 292, 729, 279, 580, 328, 548, 338.2, 234.8, 345, 227.3, 345, 222.2, 357.4, 298.9, 433, 309.2, 433, 575.2, 366, 587.2, 366, 590.4, 350, 280.8, 430.7, 192.4, 341.2, 185.2, 344.1, 8.7, 349, 0, 349, 0, 499.8, 0.1, 507, 14.2, 507, 267.3, 443, 275.7, 443, 773, 350.5, 773, 369.5, 842, 400.4, 852.4, 406.6, 884.9, 386, 892.3, 386, 893.6, 367.4, 918, 367.4, 918, 374.5, 880, 399.6, 880, 413.1, 974, 446, 985.8, 451.8, 1038.8, 405, 1045.3, 405, 1046.7, 386.5, 579.6, 372.3, 425.8, 411, 418.4, 411, 414.3, 425.6, 486.2, 469, 493.7, 469, 588.5, 388.6, 582, 381, 1152, 501, 1152, 399, 1064, 385.3, 1064, 393.6, 1009, 444.6, 1009, 457.2, 1141.4, 501, 777, 385.9, 777, 394.8, 767, 399.8, 767, 411.5, 908, 537.5, 908, 542.2, 924, 545.4, 956.6, 468, 959.4, 468, 962.3, 451.4, 702, 401, 682, 408, 682, 424, 689, 494.6, 689, 510, 724.9, 518, 740.8, 518, 592, 405, 450.7, 511, 443.4, 511, 442.6, 530.2, 500.6, 535, 526.3, 535, 606.3, 417.6, 598, 412, 597.2, 412, 627.9, 411.1, 585.9, 469.1, 593, 474.2, 593, 475, 595.1, 484.8, 622.2, 479, 629.7, 479, 645.7, 418.6, 636, 416, 634.6, 416, 757.9, 415.2, 746, 420.5, 746, 423.4, 732, 435.4, 732, 445.3, 754, 531.3, 754, 546.2, 838.1, 510, 843.9, 510, 848.8, 497.2, 371, 413.9, 371, 424.2, 284.6, 447, 274.1, 447, 287.8, 612, 301.3, 612, 467.3, 488, 472.7, 488, 476.6, 473, 672.1, 427.6, 653, 428.4, 653, 437.1, 611.5, 557.7, 620, 560.6, 621.9, 570.8, 672.9, 561, 683.9, 561, 279.1, 634, 259.9, 452.5, 241, 453.5, 241, 456.2, 7.7, 516, 0, 516, 0, 638.8, 0.1, 648, 253.9, 648, 270.6, 634, 1152, 648, 1152, 515.1, 969, 450.9, 969, 463.9, 933, 552, 933, 560.5, 1026, 643.5, 1026, 648, 601.4, 493.3, 565.5, 503, 559.9, 503, 494.9, 593, 490.8, 593, 487.6, 609.2, 561, 639, 573.4, 639, 613.6, 504.9, 604, 502, 1002.8, 635.1, 859.8, 508.2, 848, 513.5, 848, 514.3, 767.9, 549, 756.3, 549, 778, 640, 778, 648, 997.9, 648, 692, 517.8, 692, 532.3, 695, 586.6, 695, 607.6, 744.4, 592, 756.8, 592, 744, 540.8, 744, 532.4, 510, 542.3, 405, 538.6, 405, 545, 295.7, 627, 292, 627, 286.4, 637.6, 293.2, 648, 443.5, 648, 510, 557.3, 589.4, 648, 688.1, 648, 677.7, 568.4, 659, 569.6, 659, 572.5, 611.4, 587, 603, 587, 589, 625, 580.2, 625, 701.9, 648, 767.8, 648, 753.1, 598.9, 736, 601.4, 736, 604.1, 705.2, 616, 692.7, 616, 519.4, 632, 472, 611.9, 472, 625.4, 466, 636.5, 466, 648, 516.2, 648)
uv = PackedVector2Array(0, 0, 0, 159.6, 317.2, 208, 327.5, 208, 375.5, 132, 378.1, 132, 382.8, 118.6, 239, 4.2, 239, 0, 653, 0, 270, 0, 270, 13.6, 319, 55.6, 319, 60, 646.9, 132, 659.5, 132, 653, 8.5, 813.1, 1.2, 761.1, 0, 666, 0, 666, 58.1, 803.5, 21, 812.9, 21, 1098.1, 1.2, 1026.7, 0, 896, 0, 896, 6, 861, 59, 861, 75.7, 1088.1, 21, 1097.9, 21, 852.3, 15.4, 675.8, 64, 665.5, 64, 676.5, 276, 698.3, 276, 863.3, 29.6, 855, 24, 1152, 178, 1152, 96.9, 1149.7, 15.9, 1130, 16.1, 1130, 19.1, 988, 53, 981.9, 53, 976.3, 64, 1075.9, 200, 1084.8, 200, 1144.8, 178, 957.3, 58.3, 943, 62.6, 849, 85, 841.7, 85, 724.8, 255, 720.7, 255, 717.7, 271.4, 743.2, 281, 750, 281, 985.1, 127, 990, 127, 995.6, 116.5, 375, 78.5, 375, 96.8, 617, 290.8, 618.833, 297.343, 652.478, 285.855, 665.607, 280.931, 659, 151.5, 659, 143, 1008, 123.3, 994, 127.7, 994, 130.5, 761.5, 282.6, 766, 289.4, 766, 291, 769, 300.5, 1049.4, 211, 1056.1, 211, 1061.7, 200.3, 395.2, 128.3, 384, 133.7, 384, 138.2, 345, 203.2, 345, 214.2, 581.081, 297.384, 589.71, 295.554, 602.26, 289.017, 0, 163.7, 0, 177.4, 5, 240.8, 5, 249.9, 49.4, 255, 58, 255, 87, 201, 91, 201, 92.9, 183.1, 104, 180.9, 104, 191.7, 78, 247.8, 78, 259.8, 319.3, 292, 324.3, 292, 376.3, 253, 383.1, 253, 384.8, 234.9, 1152, 262, 1152, 251.2, 1150.8, 186.9, 1131, 187.1, 1131, 190.9, 1085.4, 207, 1080.7, 207, 1034.8, 255, 1027.3, 255, 1028.7, 276.3, 1137.5, 262, 1017.8, 228.5, 840.791, 285.103, 787.752, 300.229, 786.573, 316.534, 980.5, 287, 990.5, 287, 1028.5, 243.6, 1021, 237, 400, 236.6, 400, 247.2, 356, 282.2, 356, 296.9, 573.4, 322, 583.4, 322, 586.3, 305.5, 0, 254.3, 0, 342.3, 80.3, 340, 105.7, 340, 141.7, 296, 147.3, 296, 148.7, 277.5, 1150.9, 268, 1131, 268, 1131, 270.6, 1101.3, 276, 1090.3, 276, 1095, 344.7, 1095, 378.8, 1138.7, 390, 1152, 390, 1152, 379.8, 164, 276.5, 164, 285.5, 133, 324.5, 133, 339.2, 420.2, 333, 532.187, 331.898, 534.802, 322.485, 1078.3, 278.7, 1059, 279.4, 1059, 281.4, 791, 324, 781.6, 324, 780.4, 342.7, 1071.3, 381, 1085.8, 381, 700.072, 283.393, 683.66, 290.779, 644, 294, 618, 305, 597.498, 301.446, 595.857, 324.423, 595.036, 337.553, 606.524, 398.277, 656.581, 413.868, 706, 389, 724.1, 422, 737.6, 422, 768, 350, 768, 336, 688.4, 327.6, 749, 331, 770, 326, 745.205, 303.908, 732.896, 288.317, 548, 331.8, 548, 338.2, 234.8, 345, 227.3, 345, 222.2, 357.4, 298.9, 433, 309.2, 433, 575.2, 366, 587.2, 366, 590.4, 350, 280.8, 430.7, 192.4, 341.2, 185.2, 344.1, 8.7, 349, 0, 349, 0, 499.8, 0.1, 507, 14.2, 507, 267.3, 443, 275.7, 443, 773, 350.5, 773, 369.5, 842, 400.4, 852.4, 406.6, 884.9, 386, 892.3, 386, 893.6, 367.4, 918, 367.4, 918, 374.5, 880, 399.6, 880, 413.1, 974, 446, 985.8, 451.8, 1038.8, 405, 1045.3, 405, 1046.7, 386.5, 579.6, 372.3, 425.8, 411, 418.4, 411, 414.3, 425.6, 486.2, 469, 493.7, 469, 588.5, 388.6, 582, 381, 1152, 501, 1152, 399, 1064, 385.3, 1064, 393.6, 1009, 444.6, 1009, 457.2, 1141.4, 501, 777, 385.9, 777, 394.8, 767, 399.8, 767, 411.5, 908, 537.5, 908, 542.2, 924, 545.4, 956.6, 468, 959.4, 468, 962.3, 451.4, 704.175, 400.739, 686.122, 407.303, 677.096, 413.048, 689, 494.6, 689, 510, 724.9, 518, 740.8, 518, 592, 405, 450.7, 511, 443.4, 511, 442.6, 530.2, 500.6, 535, 526.3, 535, 606.3, 417.6, 598, 412, 597.2, 412, 627.9, 411.1, 585.9, 469.1, 593, 474.2, 593, 475, 595.1, 484.8, 622.2, 479, 629.7, 479, 645.7, 418.6, 636, 416, 634.6, 416, 757.9, 415.2, 746, 420.5, 746, 423.4, 732, 435.4, 732, 445.3, 754, 531.3, 754, 546.2, 838.1, 510, 843.9, 510, 848.8, 497.2, 371, 413.9, 371, 424.2, 284.6, 447, 274.1, 447, 287.8, 612, 301.3, 612, 467.3, 488, 472.7, 488, 476.6, 473, 672.1, 427.6, 653, 428.4, 653, 437.1, 611.5, 557.7, 620, 560.6, 621.9, 570.8, 672.9, 561, 683.9, 561, 279.1, 634, 259.9, 452.5, 241, 453.5, 241, 456.2, 7.7, 516, 0, 516, 0, 638.8, 0.1, 648, 253.9, 648, 270.6, 634, 1152, 648, 1152, 515.1, 969, 450.9, 969, 463.9, 933, 552, 933, 560.5, 1026, 643.5, 1026, 648, 601.4, 493.3, 565.5, 503, 559.9, 503, 494.9, 593, 490.8, 593, 487.6, 609.2, 561, 639, 573.4, 639, 613.6, 504.9, 604, 502, 1002.8, 635.1, 859.8, 508.2, 848, 513.5, 848, 514.3, 767.9, 549, 756.3, 549, 778, 640, 778, 648, 997.9, 648, 692, 517.8, 692, 532.3, 695, 586.6, 695, 607.6, 744.4, 592, 756.8, 592, 744, 540.8, 744, 532.4, 510, 542.3, 405, 538.6, 405, 545, 295.7, 627, 292, 627, 286.4, 637.6, 293.2, 648, 443.5, 648, 510, 557.3, 589.4, 648, 688.1, 648, 677.7, 568.4, 659, 569.6, 659, 572.5, 611.4, 587, 603, 587, 589, 625, 580.2, 625, 701.9, 648, 767.8, 648, 753.1, 598.9, 736, 601.4, 736, 604.1, 705.2, 616, 692.7, 616, 519.4, 632, 472, 611.9, 472, 625.4, 466, 636.5, 466, 648, 516.2, 648)
polygons = [PackedInt32Array(0, 1, 2, 3, 4, 5, 6, 7, 8), PackedInt32Array(9, 10, 11, 12, 13, 14, 15, 16), PackedInt32Array(17, 18, 19, 20, 21, 22), PackedInt32Array(23, 24, 25, 26, 27, 28, 29, 30), PackedInt32Array(31, 32, 33, 34, 35, 36, 37), PackedInt32Array(38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48), PackedInt32Array(49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60), PackedInt32Array(61, 62, 63, 64, 65, 66, 67, 68), PackedInt32Array(69, 70, 71, 72, 73, 74, 75, 76, 77, 78), PackedInt32Array(79, 80, 81, 82, 83, 84, 85, 86), PackedInt32Array(87, 88, 89, 90, 91, 92, 93, 94, 95), PackedInt32Array(96, 97, 98, 99, 100, 101, 102, 103, 104), PackedInt32Array(105, 106, 107, 108, 109, 110, 111, 112, 113, 114, 115), PackedInt32Array(116, 117, 118, 119, 120, 121, 122, 123), PackedInt32Array(124, 125, 126, 127, 128, 129, 130), PackedInt32Array(131, 132, 133, 134, 135, 136, 137), PackedInt32Array(138, 139, 140, 141, 142, 143, 144, 145, 146, 147), PackedInt32Array(148, 149, 150, 151, 152, 153, 154), PackedInt32Array(155, 156, 157, 158, 159, 160, 161, 162), PackedInt32Array(163, 164, 165, 166, 167, 168, 169, 170, 171, 172, 173, 174, 175, 176, 177, 178, 179, 180, 181), PackedInt32Array(182, 183, 184, 185, 186, 187, 188, 189, 190, 191), PackedInt32Array(192, 193, 194, 195, 196, 197, 198, 199, 200, 201), PackedInt32Array(202, 203, 204, 205, 206, 207, 208), PackedInt32Array(209, 210, 211, 212, 213, 214, 215, 216, 217), PackedInt32Array(218, 219, 220, 221, 222, 223, 224, 225), PackedInt32Array(226, 227, 228, 229, 230, 231, 232), PackedInt32Array(233, 234, 235, 236, 237, 238, 239, 240, 241, 242), PackedInt32Array(243, 244, 245, 246, 247, 248, 249), PackedInt32Array(250, 251, 252, 253, 254, 255, 256, 257, 258), PackedInt32Array(259, 260, 261, 262, 263, 264, 265, 266, 267, 268), PackedInt32Array(269, 270, 271, 272, 273, 274, 275, 276, 277, 278), PackedInt32Array(279, 280, 281, 282, 283, 284, 285, 286, 287), PackedInt32Array(288, 289, 290, 291, 292, 293, 294, 295), PackedInt32Array(296, 297, 298, 299, 300, 301, 302, 303, 304, 305), PackedInt32Array(306, 307, 308, 309, 310, 311, 312, 313), PackedInt32Array(314, 315, 316, 317, 318, 319, 320, 321, 322, 323), PackedInt32Array(324, 325, 326, 327, 328, 329, 330, 331, 332), PackedInt32Array(333, 334, 335, 336, 337, 338, 339, 340), PackedInt32Array(341, 342, 343, 344, 345, 346, 347, 348, 349), PackedInt32Array(350, 351, 352, 353, 354, 355, 356, 357, 358), PackedInt32Array(359, 360, 361, 362, 363, 364, 365), PackedInt32Array(366, 367, 368, 369, 370, 371)]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_w5w50")

[node name="FinalTexture" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
